# $Id: Changes,v 1.19 2003/07/01 02:10:08 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.52
	[ENHANCEMENTS]
	* mech-forms now handles local files.

0.51	June 29, 2003
	[ENHANCEMENTS]
	* Added the "mech-forms" command to list all the forms on a given page.

	[FIXES]
	* Made the tick.t test not rely on 2shortplanks.com.

0.50	June 24, 2003
	[ENHANCEMENTS]
	* Mech now does what most browsers do when they handle a redirect:
	  It changes the POST to a GET.  This doesn't match the RFC,
	  but it's what browsers do.  Thanks to Stuart Children.

0.49	June 23, 2003
	[FIXES]
	* Added a fix a while ago that tracks redirect history.  That fix
	  had the bad side effect of always allowing a redirect.
	  That has now been fixed.

0.48	June 22, 2003
	[ENHANCEMENTS]
	* Added find_all_links() as the counterpart to find_link().

	[FIXES]
	* get() wasn't passing through its parms to LWP::UserAgent::get(),
	  so you couldn't use the :content_file parm.  Now it
	  behaves like a good little subclass.

0.47	June 21, 2003
	[ENHANCEMENTS]
	* find_link() now lets you pass n=>"all" to get back a list
	  of all links that match the other criteria.  NOTE: Outdated!  See
	  v0.48 for the preferred way.
	* find_link() and follow_link() now complain if you pass
	  invalid parms to them.

	[FIXES]
	* Tracks URI history properly after redirects.

0.46	June 20, 2003
	[ENHANCEMENTS]
	* Added tick() and untick() functions for handling checkboxes.
	  Thanks to Mark Fowler for this patch.
	* The uri() will only be the URI of the requested page if it worked.
	* Oh yes, I forgot to mention: We're on Sourceforge now.

0.45	June 11, 2003
	[ENHANCEMENTS]
	* Added response() method, which is identical to res().
	* Added a convenience method success(), which is just a wrapper
	  around $agent->res->is_success().
	* Passes along a Referer: header.  It can still be overridden
	  with the %Headers hash, though.  Thanks, Corion.