@@ -25,6 +25,7 @@ t/get.t
 t/google.html
 t/lib/Test/HTTP/LocalServer.pm
 t/lib/Test/HTTP/log-server
+t/mech-forms.t
 t/new-local.t
 t/new.t
 t/page_stack.t
