@@ -1,9 +1,10 @@
-# $Id: Changes,v 1.19 2003/07/01 02:10:08 petdance Exp $
+# $Id: Changes,v 1.20 2003/07/01 17:20:11 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.52
 	[ENHANCEMENTS]
 	* mech-forms now handles local files.
+	* Added t/mech-forms.t to test the app
 
 0.51	June 29, 2003
 	[ENHANCEMENTS]
